--- a/Views/Juego/Index.cshtml
+++ b/Views/Juego/Index.cshtml
@@ -1,14 +1,12 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>Sintaxis HTML</title>
-    <header>Modos de Juego</header>
     <style>
         body {
             background: #96DDCC;
         }
 
-        header {
+        #header {
             position: absolute;
             font-family: 'kaushan Script', cursive;
             font-size: 70px;
@@ -74,7 +72,7 @@
             font-family: 'kaushan Script', cursive;
             position: absolute;
             left: 600px;
-            top: 450px;
+            top: 500px;
             width: 300px;
             height: 40px;
             border-radius: 50px;
@@ -86,7 +84,7 @@
             font-family: 'kaushan Script', cursive;
             position: absolute;
             left: 600px;
-            top: 500px;
+            top: 450px;
             width: 300px;
             height: 40px;
             border-radius: 50px;
@@ -98,21 +96,22 @@
 
 </head>
 <body>
-        <input id="botonEditar" type="submit" value=" Editar Usuarios " onclick="location.href='@Url.Action("Deshabilitar", "Usuarios")'">
-        <br>
-        <br>
-        <input id="botonCarga" type="submit" value=" Cargar Partida " onclick="location.href='@Url.Action("Tablero", "Tablero")'">
-        <br>
-        <br>
-        <input id="botonIndividual" type="submit" value=" Partida Individual" onclick="location.href='@Url.Action("Tablero", "Tablero")'">
-        <br>
-        <br>
-        <input id="botonVS" type="submit" value="Contra Otro Jugador" onclick="location.href='@Url.Action("Tablero", "Tablero")'">
-        <br>
-        <br>
-        <input id="botonTorneo" type="submit" value="Torneo" onclick="location.href='@Url.Action("Torneo", "Torneo")'">
-        <br>
-        <br>
-        <input id="Salir" type="submit" value="Salir" onclick="location.href='@Url.Action("Index", "Home")'">
+    <label id="header">Modos de Juego</label>
+    <input id="botonEditar" type="submit" value=" Editar Usuarios " onclick="location.href='@Url.Action("Deshabilitar", "Usuarios")'">
+    <br>
+    <br>
+    <input id="botonCarga" type="submit" value=" Cargar Partida " onclick="location.href='@Url.Action("Cargar", "Cargar")'">
+    <br>
+    <br>
+    <input id="botonIndividual" type="submit" value=" Partida Individual" onclick="location.href='@Url.Action("Tablero", "Tablero")'">
+    <br>
+    <br>
+    <input id="botonVS" type="submit" value="Contra Otro Jugador" onclick="location.href='@Url.Action("Tablero", "Tablero")'">
+    <br>
+    <br>
+    <input id="botonTorneo" type="submit" value="Torneo" onclick="location.href='@Url.Action("Torneo", "Torneo")'">
+    <br>
+    <br>
+    <input id="Salir" type="submit" value="Salir" onclick="location.href='@Url.Action("Index", "Home")'">
 </body>
 </html>
