--- a/Views/Juego/Index.cshtml
+++ b/Views/Juego/Index.cshtml
@@ -100,7 +100,7 @@
     <input id="botonEditar" type="submit" value=" Editar Usuarios " onclick="location.href='@Url.Action("Deshabilitar", "Usuarios")'">
     <br>
     <br>
-    <input id="botonCarga" type="submit" value=" Cargar Partida " onclick="location.href='@Url.Action("Cargar", "Cargar")'">
+    <input id="botonCarga" type="submit" value=" Cargar Partida " onclick="location.href='@Url.Action("Tablero", "Tablero")'">
     <br>
     <br>
     <input id="botonIndividual" type="submit" value=" Partida Individual" onclick="location.href='@Url.Action("Tablero", "Tablero")'">
