--- a/Views/Juego/Index.cshtml
+++ b/Views/Juego/Index.cshtml
@@ -103,10 +103,10 @@
     <input id="botonCarga" type="submit" value=" Cargar Partida " onclick="location.href='@Url.Action("Tablero", "Tablero")'">
     <br>
     <br>
-    <input id="botonIndividual" type="submit" value=" Partida Individual" onclick="location.href='@Url.Action("Tablero", "Tablero")'">
+    <input id="botonIndividual" type="submit" value=" Partida Individual" onclick="location.href='@Url.Action("Individual", "Individual")'">
     <br>
     <br>
-    <input id="botonVS" type="submit" value="Contra Otro Jugador" onclick="location.href='@Url.Action("Tablero", "Tablero")'">
+    <input id="botonVS" type="submit" value="Contra Otro Jugador" onclick="location.href='@Url.Action("Contra", "Contra")'">
     <br>
     <br>
     <input id="botonTorneo" type="submit" value="Torneo" onclick="location.href='@Url.Action("Torneo", "Torneo")'">
