--- a/Views/Tablero/Tablero.cshtml
+++ b/Views/Tablero/Tablero.cshtml
@@ -1023,7 +1023,6 @@
             <td bgcolor="#6ADB6D"><input type="button" id="G8" value="   " class="botones" /></td>
             <td><font color="#6ADB6D"><input type="button" id="H8" value="   " class="botones" /></font></td>
         </tr>
-        <!-- document.getElementById("H8").style.backgroundColor = "black";-->
     </table>
     <label id="puntos">PUNTEO</label>
     <label id="blancas">Blancas = </label>
@@ -1032,14 +1031,94 @@
     <input id="Pnegras" type="text" placeholder=" " disabled="disabled">
     <input id="Salir" type="submit" value="Salir" onclick="location.href='@Url.Action("Index", "Juego")'">
     <input id="Reportes" type="submit" value=" Reportes ">
-    <input id="Guardar" type="submit" value="Guardar">
+    <input id="Guardar" type="submit" value="Guardar" >
     <input id="Repetir" type="submit" value=" Volver a Jugar" onclick="location.href='@Url.Action("Tablero", "Tablero")'">
     <input id="Ruta" type="text" value="" required="" />
-    <input id="Mostrar" type="submit" value=" Mostrar Ficha "/>
+    <input id="Mostrar" type="submit" value=" Mostrar Ficha" />
     <input id="toca" type="text" value=" " disabled="disabled"/>
     <p id="Toca">TURNO</p>
 
     @section scripts {
+        <script>
+            var posiciones = ["A1", "B1", "C1", "D1", "E1", "F1", "G1", "H1", "A2", "B2", "C2", "D2", "E2", "F2", "G2", "H2", "A3", "B3", "C3", "D3", "E3", "F3", "G3", "H3", "A4", "B4", "C4", "D4", "E4", "F4", "G4", "H4", "A5", "B5", "C5", "D5", "E5", "F5", "G5", "H5", "A6", "B6", "C6", "D6", "E6", "F6", "G6", "H6", "A7", "B7", "C7", "D7", "E7", "F7", "G7", "H7", "A8", "B8", "C8", "D8", "E8", "F8", "G8", "H8"];
+            var fichasGuardar = [];
+            var contadorGuardar = 0;
+            document.getElementById('Guardar').onclick = function () {
+                guardar();
+                contadorGuardar++;
+            }
+            function guardar() {
+                var conteo = 0;
+                var fila = "";
+                var columna = "";
+                var color = "";
+                var turno = document.getElementById("toca").value;
+                while (conteo < posiciones.length) {
+                    filita = posiciones[conteo];
+                    fila = filita.split("");
+                    color = document.getElementById(posiciones[conteo]).style.backgroundColor;
+                    if (color == "white" || color == "black") {
+                        fichasGuardar.push(posiciones[conteo]);
+                    }
+                    conteo++;
+                }
+                var conteo = 0;
+                while (conteo < fichasGuardar.length) {
+                    filita = fichasGuardar[conteo];
+                    fila = filita.split("");
+                    color = document.getElementById(fichasGuardar[conteo]).style.backgroundColor;
+                    if (color == "white") {
+                        color = "blanco";
+                    }
+                    else {
+                        color = "negro";
+                    }
+                    alert(fila + "-->" + color)
+                    $.ajax(
+                        {
+                            type: 'POST',
+                            dataType: 'text',
+                            url: '@Url.Action("Guardar", "Tablero")',
+                            data: { contadorG: conteo, columnaR: fila[0], filaR: fila[1], colorR: color },
+                            success:
+                                function (response) {
+                                    var cadena = response;
+                                    if (cadena == "se ha guardado el archivo") {
+                                        alert(cadena);
+                                    }
+                                },
+                            error:
+                                function (response) {
+                                    alert("Error: " + response);
+                                }
+                        });
+                    conteo++;
+                }
+                var conteo = 0;
+                var fila = "k9";
+                var color = turno;
+                alert("   "+conteo+"    "+fila[0]+"   "+fila[1]+"    "+color);
+                $.ajax(
+                            {
+                                type: 'POST',
+                                dataType: 'text',
+                                url: '@Url.Action("Guardar", "Tablero")',
+                                data: { contadorG: conteo, columnaR: fila[0], filaR: fila[1], colorR: color},
+                                success:
+                                    function (response) {
+                                        var cadena = response;
+                                        if (cadena == "Se ha guardado el archivo.") {
+                                            alert(cadena);
+                                        }
+                                    },
+                                error:
+                                    function (response) {
+                                        alert("Error: " + response);
+                                    }
+                            });
+
+                }
+        </script>
         <script type="text/javascript">
             var contador = 0;
             document.getElementById('Mostrar').onclick = function () {
@@ -1675,7 +1754,6 @@
             ///////////////////////////////////////////////////////////////////////////////////////////
             ///////////////////////////////////////////////////////////////////////////////////////////
             $('#A1').click(function (e) {
-                 alert(contador);
                  $.ajax(
                      {
                          type: 'POST',
@@ -2944,6 +3022,7 @@
                      });
             });
             ///////////////////////////////////////////////////////////////////////////////////////////////////////////
+
             $('#F8').click(function (e) {
                  $.ajax(
                      {
@@ -3403,6 +3482,8 @@
                              }
                      });
             });
+/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
         </script>
     }
 </body>
