--- a/Views/Usuarios/Index.cshtml
+++ b/Views/Usuarios/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<WebApplication1.Usuario>
+﻿@model IEnumerable<WebApplication1.Entity.Usuario>
 
 @{
     ViewBag.Title = "CREAR USUARIO";
